--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,9 +1,36 @@
 spring.application.name=api-gateway
 server.port=8765
-
-eureka.client.service-url.defaultZone=http://naming-server:8761/eureka/
-
+spring.config.import=optional:configserver:http://config-server:8888
 
 
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+eureka.client.service-url.defaultZone=${NAMING_SERVER:http://localhost:8761/eureka/}
+
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/auth/realms/master
+#spring.security.oauth2.client.provider.my-keycloak-provider.issuer-uri= http://keycloak:8080/auth/realms/dev
+#spring.security.oauth2.client.registration.keycloak-spring-gateway-client.provider= my-keycloak-provider
+#spring.security.oauth2.client.registration.keycloak-spring-gateway-client.client-id= api-gateway
+#spring.security.oauth2.client.registration.keycloak-spring-gateway-client.client-secret= y1OQFb0SwDDbNQM7m2EA6PnDjFN47mYe
+#spring.security.oauth2.client.registration.keycloak-spring-gateway-client.authorization-grant-type= authorization_code
+#spring.security.oauth2.client.registration.keycloak-spring-gateway-client.redirect-uri= /
+
+logging.level.org.springframework.web= DEBUG
+logging.level.org.hibernate= ERROR
+
+#set localhost as a variable tobe keycloack in docker
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/auth/realms/dev/protocol/openid-connect/token/introspect
+spring.security.oauth2.resourceserver.opaquetoken.client-id= api-gateway
+spring.security.oauth2.resourceserver.opaquetoken.client-secret= x95VhSDMu5BA455Y0L46wo3KIjBjdZyi
+
+#spring.cloud.gateway.routes[0].id=currency-exchange
+#spring.cloud.gateway.routes[0].uri=lb://currency-exchange
+#spring.cloud.gateway.routes[0].predicates[0]=Path=//currency-exchange/**
+#spring.cloud.gateway.routes[1].id=currency-conversion
+#spring.cloud.gateway.routes[1].uri=lb://currency-conversion
+#spring.cloud.gateway.routes[1].predicates[0]=Path=//currency-conversion/**
+#spring.cloud.gateway.routes[1].predicates[1]=Path=//currency-converter-feign/**
+
+
