--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=file:///Ranga/git/01.udemy-course-repos/spring-micro-services/03.microservices/git-localconfig-repo
+spring.cloud.config.server.git.uri=https://github.com/mostafa-elfeky/microservices-config.git
