--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 spring.application.name=currency-conversion
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config-server:8888
 
 server.port=8100
 
-eureka.client.service-url.defaultZone=http://naming-server:8761/eureka/
+eureka.client.service-url.defaultZone=${NAMING_SERVER:http://localhost:8761/eureka/}
+
 
 
 
