--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8000
 spring.application.name=currency-exchange
-spring.config.import=optional:configserver:http://configserver:8888
+spring.config.import=optional:configserver:http://config-server:8888
 
 #database
 spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}?useSSL=false&allowPublicKeyRetrieval=true
@@ -13,4 +13,5 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 #naming server
-eureka.client.service-url.defaultZone=http://naming-server:8761/eureka/
+eureka.client.service-url.defaultZone=${NAMING_SERVER:http://localhost:8761/eureka/}
+
