--- a/naming-server/src/main/resources/application.properties
+++ b/naming-server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=naming-server
 server.port=8761
+spring.config.import=optional:configserver:http://config-server:8888
+
 
 
 eureka.client.register-with-eureka=false
