--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.7'
 services:
 
+  config-server:
+    build:
+      context: config-server
+      dockerfile: Dockerfile
+    ports:
+      - "8888:8888"
+    restart: always
+    volumes:
+      - ./git-localconfig-repo:/app/config
+    networks:
+      - currency-compose-network
+
   naming-server:
     build:
       context: naming-server
@@ -18,11 +30,54 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root 
-      MYSQL_USER: todos-user
-      MYSQL_PASSWORD: todos-user
+      MYSQL_USER: user
+      MYSQL_PASSWORD: user
       MYSQL_DATABASE: todos
     volumes:
+      - ./init:/docker-entrypoint-initdb.d
       - mysql-database-data-volume:/var/lib/mysql
+    networks:
+      - currency-compose-network
+
+  keycloak:
+    image: jboss/keycloak
+    environment:
+      DB_VENDOR: MYSQL
+      DB_ADDR: mysql
+      DB_PORT: 3306
+      DB_DATABASE: keycloack
+      DB_USER: user
+      DB_PASSWORD: user
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+      JDBC_PARAMS: "allowPublicKeyRetrieval=true"
+    ports:
+      - 8080:8080
+    expose:
+      - 8080
+    depends_on:
+      - mysql
+    volumes:
+      - ./cloud-realm.json:/tmp/cloud-realm.json
+    networks:
+      - currency-compose-network
+
+    
+  api-gateway:
+    build:
+      context: api-gateway
+      dockerfile: Dockerfile
+    ports:
+      - "8765:8765"
+    expose:
+      - 8765
+    environment:
+      NAMING_SERVER: http://naming-server:8761/eureka/
+    depends_on: 
+      - naming-server
+      - config-server
+      - keycloak
+    restart: always
     networks:
       - currency-compose-network
 
@@ -34,12 +89,14 @@ services:
       - mysql 
       - currency-conversion-service
       - naming-server
+      - config-server
     environment:
       RDS_HOSTNAME: mysql
       RDS_PORT: 3306
       RDS_DB_NAME: todos
-      RDS_USERNAME: todos-user
-      RDS_PASSWORD: todos-user
+      RDS_USERNAME: user
+      RDS_PASSWORD: user
+      NAMING_SERVER: http://naming-server:8761/eureka/
     ports:
       - "8000:8000"
     restart: always
@@ -52,8 +109,11 @@ services:
       dockerfile: Dockerfile
     depends_on: 
       - naming-server
+      - config-server
     ports:
       - "8100:8100"
+    environment:
+      NAMING_SERVER: http://naming-server:8761/eureka/
     restart: always
     networks:
       - currency-compose-network
